* would exit on SIGPIPE
* impl look-ahead
* OPENDNSSEC-909
* DS automatically to submitted even if there wasn't a DSsubmitCommand
    TODO: figure out this bug was before or after DBW
* Implement explicit ordering in key list cmd

OpenDNSSEC 2.2 - 2017-xx-xx

* OPENDNSSEC-901: Enforcer would ignore <ManualKeyGeneration/> tag in conf.xml
* OPENDNSSEC-890: Mismatching TTLs in record sets would cause bogus signatures.
* OPENDNSSEC-908: Warn when TTL exceeds KASP's MaxZoneTTL instead of capping.
* OPENDNSSEC-620: SocketFile and PidFile where not reconized in the signer config.
* OPENDNSSEC-885: Command policy resalt without arguments is no longer allowed.
  Either policy or all must be specified.
* OPENDNSSEC-910: DelegationSignerSubmitCommand would strip --cka_id

OpenDNSSEC 2.1.1 - 2017-04-28

* OPENDNSSEC-882: Signerd exit code always non-zero.
* OPENDNSSEC-889: MySQL migration script didn't work for all database and
  MySQL versions.
* OPENDNSSEC-879: --suspend option for 'zone add' was broken. Fixed and
  undocumented since it is not intended for production.
* OPENDNSSEC-887: Segfault on extraneous <Interval> tag.
* Libunwind header files presence not properly checked.
* OPENDNSSEC-508: Implementing <RolloverNotification> tag.

OpenDNSSEC 2.1.0 - 2017-02-22

* If listening port for signer is not set in conf file, the default value
  "15354" is used.
* Enforce and signconf tasks are now scheduled individually per zone. Resign
  per policy.
* OPENDNSSEC-450: Implement support for ECDSA P-256, P-384, GOST. Notice:
  SoftHSMv1 only supports RSA. SoftHSMv2 can be compiled with support for these.
* zone delete removes tasks associated with zone from queue.
* Show help for ods-enforcer-db-setup
* OPENDNSSEC-778: Double NSEC3PARAM record after resalt.
* In the kasp file, KSK/ZSK section, the algorithm length MUST be set now.
* signer clear <zone> would assert when signconf wasn't read yet.
* The <Interval> tag had been deprecated, and is now no longer allowed to